samples/_failures_safe/1761406998_5aa6c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5aa7cfb4.c: In function ‘main’:
./samples/SAFE/__tmp_5aa7cfb4.c:178:5: error: expected declaration or statement at end of input
  178 |     printf("Tokens:\n");
      |     ^~~~~~
